--- a/css/abstract.css
+++ b/css/abstract.css
@@ -83,9 +83,13 @@
 	display: inline-block;
 	float: left;
 	width: 313.328px;
-	height: 115px;
+	height: 150px;
 	padding: 0 15px;
 	margin: 15px 0;
 	text-align: center;
+}
+.customer-ex span img{
+	width: 100%;
+	height: 100%;
 }
 
